# DL

./: .gitignore  CMakeLists.txt  README.md  Todo.txt
analysis/: copying.txt  pointwise.txt
lib/activations/: CMakeLists.txt
lib/activations/src/: activations.cu  activations.h  relu.cu  relu.h  sigmoid.cu  sigmoid.h  softmax.cu  softmax.h  tanh.h
lib/cost/: CMakeLists.txt  costs.h
lib/cost/src/: cce_cost.cu  cce_cost.h  cce_soft_cost.cu  cce_soft_cost.h  costfunctions.cu  costs.cu  costs.h  mse_cost.cu  mse_cost.h
lib/layers/: CMakeLists.txt
lib/layers/src/: layers.h  linear.cu  linear.h  linear_propagation.cu
lib/layers/test/: test_layers.h
lib/matrix/: CMakeLists.txt
lib/matrix/src/: matrix.h
lib/matrix/test/: test_matrices_cpp.cu  test_matrices_cpp.h
lib/matrix_operations/: CMakeLists.txt
lib/matrix_operations/src/: common_utils.h  kernel_utils.cu  kernel_utils.h  mat_mul.cu  mat_mul.h  matrix_operator.cu  matrix_operator.h  matrix_operator_gpu.cu  pw2d_comp.h  pw_comp.h  reduce.cu  reduce.h
lib/matrix_operations/test/: test_matrix_operator.cu
lib/misc/: CMakeLists.txt  common.c
lib/neural_network/: CMakeLists.txt
lib/neural_network/src/: neural_network.cu  neural_network.h
lib/neural_network/test/: test_network.cpp  test_network.cu  test_network.h
lib/object_factory/: Makefile
lib/object_factory/src/: essentials.h  example_class.h  object_factory.h  range.h  test_object_factory.cpp  timer.h
lib/utils/: CMakeLists.txt  binding.cu  common_utils.h  device_utils.h  host_utils.h
run_scripts/: CMakeLists.txt  load_mnist.py  run_network.cu
src/layers/: linear_propagation.cu  tanh.h
src/matrix_operations/: matrix_operator.cu  matrix_operator.h  matrix_operator_gpu.cu
src/test_scripts/: test_activations.cu  test_ew.cu  test_matmul.cu  time_ew.cu  time_matmul.cu
src/utils/: device_utils.h  host_utils.h
test_scripts/: CMakeLists.txt  measure_network.cu  run_test_matrix_operator.cu  test_CBlas.c  test_activations.cu  test_costs.cu  test_ew.cu  test_ew2d.cu  test_functor_cuda.cu  test_layers.cu  test_matmul.cu  test_mnist_reader.cu  test_object_kernel.cu  test_step_network.cu  time_ew.cu  time_ew2d.cu  time_matmul.cu  time_network.cu  time_reduction.cu  time_softmax.cu
